[gd_scene load_steps=9 format=3 uid="uid://dk6jicep4wbsb"]

[ext_resource type="Texture2D" uid="uid://digsvxfcq0ufk" path="res://Game/Images/game_bg.png" id="1_f48nx"]
[ext_resource type="Script" uid="uid://dp58e8s7i4trt" path="res://Game/Scripts/game.gd" id="1_thwfy"]
[ext_resource type="PackedScene" uid="uid://6p77o52o066k" path="res://Game/Scenes/BagSpawner.tscn" id="2_6socv"]
[ext_resource type="AudioStream" uid="uid://bdgef6ycfu21c" path="res://Game/SFX and Musics/snow_by_Villatic_music.mp3" id="3_6socv"]
[ext_resource type="PackedScene" uid="uid://dhxpq4o1g0cq8" path="res://Game/Scenes/Player.tscn" id="4_4hm0i"]
[ext_resource type="PackedScene" uid="uid://cdhvo4lkcbn54" path="res://Game/Scenes/Score.tscn" id="5_h0auy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hm0i"]
size = Vector2(3371.6458, 169.99911)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0auy"]
size = Vector2(390, 1042)

[node name="Game" type="Node2D"]
script = ExtResource("1_thwfy")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_f48nx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 168.0
offset_top = -16.0
offset_right = 1262.0
offset_bottom = 143.0
theme_override_constants/separation = 250

[node name="Life" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Lifes:"

[node name="Life_count" type="Label" parent="Control/HBoxContainer/Life"]
layout_mode = 0
offset_left = 162.0
offset_right = 265.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
text = "999"

[node name="Level" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Level:"

[node name="Level_count" type="Label" parent="Control/HBoxContainer/Level"]
layout_mode = 0
offset_left = 179.0
offset_right = 282.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
text = "999"

[node name="Score" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Score:"

[node name="Score_count" type="Label" parent="Control/HBoxContainer/Score"]
layout_mode = 0
offset_left = 189.0
offset_right = 292.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
text = "9999"

[node name="Time left" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Time Left:"

[node name="Timer_count" type="Label" parent="Control/HBoxContainer/Time left"]
layout_mode = 0
offset_left = 300.0
offset_right = 403.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
text = "999"

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6socv")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="Player" parent="." instance=ExtResource("4_4hm0i")]
position = Vector2(1082, 815.00006)
scale = Vector2(0.6000037, 0.6000037)

[node name="BagSpawner" parent="." instance=ExtResource("2_6socv")]
position = Vector2(2217, 609)

[node name="Limits" type="CharacterBody2D" parent="."]
position = Vector2(1086, 1049)
scale = Vector2(0.6000037, 0.6000037)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]
position = Vector2(-177.4989, 44.999756)
shape = SubResource("RectangleShape2D_4hm0i")

[node name="Limits2" type="CharacterBody2D" parent="."]
position = Vector2(153, 210)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits2"]
position = Vector2(35, 294)
shape = SubResource("RectangleShape2D_h0auy")

[node name="Score" parent="." instance=ExtResource("5_h0auy")]
position = Vector2(254, 485.99997)
scale = Vector2(9.946765, 26.417887)

[node name="Wave_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Wave_timer" to="." method="_on_wave_timer_timeout"]
